# WaternetNautonomousV2

./: .gitignore  2018-05-02-10-26-22.bag  2018-05-02-10-40-18.bag  call_cropper.txt  markers.txt  obstacles.txt  temp.txt
Docs/: actuation_platform.docx
Matlab/: Read_KKT_msgs.m  (+7 more)
src/nautonomous_map_tf/: CMakeLists.txt  package.xml
src/nautonomous_map_tf/src/: make_occupancy_grid.cpp
src/nautonomous_mpc/: CMakeLists.txt  package.xml
src/nautonomous_mpc/forces/contouring_control/: FORCESNLPsolver_model_1.c
src/nautonomous_mpc/forces/current_solver/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_50.c
src/nautonomous_mpc/forces/waypoints_navigation/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_50.c
src/nautonomous_mpc/include/mpc_ros/: boat.h  contouring_control.h  contouring_control_utils.h  mpc_ros.h  mpc_ros_defines.h  mpc_ros_utils.h  waypoints_navigation.h
src/nautonomous_mpc/launch/: mpc_ros.launch
src/nautonomous_mpc/param/: default.yaml
src/nautonomous_mpc/rviz/: default.rviz
src/nautonomous_mpc/src/: mpc_ros_node.cpp
src/nautonomous_msgs/nautonomous_mpc_msgs/: CMakeLists.txt  package.xml
src/nautonomous_msgs/nautonomous_mpc_msgs/msg/: CostsCC.msg  CostsWN.msg  Obstacle.msg  Obstacles.msg  Output.msg  StageVariable.msg  Waypoint.msg  WaypointList.msg
src/nautonomous_msgs/nautonomous_state_msgs/: CMakeLists.txt  package.xml
src/nautonomous_msgs/nautonomous_state_msgs/msg/: Boat.msg  BoatCommand.msg  BoatParam.msg  BoatState.msg  Borders.msg
src/nautonomous_obstacle_detection/: CMakeLists.txt  README.md
src/nautonomous_obstacle_detection/bashscripts/: run_obstacles.sh
src/nautonomous_obstacle_detection/include/nautonomous_obstacle_detection/: 3DPVector.h  Blob.h  PVector.h  Voxel.h
src/nautonomous_obstacle_detection/src/: Ellipse.cpp  Ellipse_without_tf.cpp  Laserscan.cpp  Map_modifier.cpp  Obstacle_tracker.cpp  Obstacle_tracker_V2.cpp  Obstacle_tracker_V3.cpp  TestFile.cpp  TestFile_2.cpp  Voxelize.cpp  example.cpp  map.cpp  visualization.cpp
src/nautonomous_planning_and_control/: CMakeLists.txt  ODEsolver
src/nautonomous_planning_and_control/include/acado/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/nautonomous_planning_and_control/include/acado_old/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp
src/nautonomous_planning_and_control/include/nautonomous_planning_and_control/: ODEsolver.h  Obstacle.h
src/nautonomous_planning_and_control/launch/: fuzzy.launch  mpc_launch.launch  reali.launch  simple_sim_fuzzy.launch  simple_sim_mpc_launch.launch  simple_sim_pid.launch  simple_sim_reali.launch
src/nautonomous_planning_and_control/param/: default.yaml  fuzzy.yaml  mpc.yaml  real_scenario.yaml  simple_sim_fuzzy.yaml  simple_sim_mpc.yaml  simple_sim_pid.yaml  simple_sim_real_scenario.yaml
src/nautonomous_planning_and_control/rviz/: default.rviz
src/nautonomous_planning_and_control/src/: Combine_imu_gps.cpp  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter_sim.cpp  ExtendedKalmanFilter_slam.cpp  ExtendedKalmanFilter_with_disturbance_estimation.cpp  Gazebo_control.cpp  ODEsolver.cpp  ODEsolverV2.cpp  ODEsolver_dynamic.cpp  PID.cpp  ReadMe.txt  mission_control.cpp  mission_controlV2.cpp  mission_controlV3.cpp  mission_controlV4.cpp  mission_controlV5.cpp  mission_control_sim.cpp  mpc.cpp  visualization.cpp
src/nautonomous_planning_and_control_using_search/: CMakeLists.txt  package.xml  temp.txt
src/nautonomous_planning_and_control_using_search/Borderfiles/: HerengrachtBorder.bag  Prodock.bag  Prodock.sh
src/nautonomous_planning_and_control_using_search/bashscripts/: 2018-04-09-11-29-27.bag  2018-04-09-11-31-28.bag  run_Herengracht.sh  run_borders.sh  run_borders2.sh  run_coenhaven.sh  run_coenhaven_with_obstacle.sh  run_cornered_map.sh  run_cornered_map_with_fixed_obstacle.sh  run_cornered_map_with_mpc.sh  run_cornered_map_with_multiple_obstacles.sh  run_cornered_map_with_obstacle.sh  run_cornered_map_with_sim_obstacle.sh  run_gazebo.sh  run_large_map.sh  run_large_map_with_multiple_obstacles.sh  run_new.sh  run_obstacle.sh  run_obstacles.sh  run_testdeel_1.sh  temp.txt
src/nautonomous_planning_and_control_using_search/launch/: Local_planner_test.launch  Local_planner_with_motion_primitives_test.launch  mission_coordinator.launch  mission_coordinator_gazebo.launch  mission_coordinator_slam.launch  mission_coordinator_slam_Herengracht.launch  mpc_mutliple_moving_obstacles.launch  mpc_mutliple_moving_obstacles_extended.launch  mpc_single_moving_obstacle.launch  mpc_single_moving_obstacle_2.launch  mpc_single_moving_obstacle_3.launch  mpc_single_obstacle.launch  obstacle_avoidance_launch.launch  path_planning_launch.launch
src/nautonomous_planning_and_control_using_search/param/: gazebo.yaml  local_planner.yaml  mission_planner.yaml  mpc.yaml  mpc_mutliple_moving_obstacles.yaml  mpc_mutliple_moving_obstacles_extended.yaml  mpc_single_moving_obstacle.yaml  mpc_single_moving_obstacle_2.yaml  mpc_single_moving_obstacle_3.yaml  mpc_single_obstacle.yaml  slam.yaml  slam_Herengracht.yaml
src/nautonomous_planning_and_control_using_search/src/: Astar_grid.cpp  Astar_grid_2.cpp  Astar_grid_alt_obstacle.cpp  Astar_grid_heap.cpp  Astar_grid_heuristics.cpp  Astar_grid_weighted_smooth.cpp  Astar_grid_with_motion_primitives.cpp  Astar_grid_with_open_list.cpp  Astar_tree.cpp  Astar_tree_opt.cpp  Astar_tree_opt_2.cpp  Astar_tree_search.cpp  Astar_tree_search_closest_first.cpp  Astar_tree_search_closest_first_with_moving_obstacle.cpp  Astar_tree_search_map_weight.cpp  Jump_point_search.cpp  RRT.cpp  ReadMe.txt  mission_control_gazebo.cpp  mission_control_real.cpp  mission_control_sim.cpp  mission_control_slam.cpp  visualization.cpp
src/nautonomous_webserver_logging/: CMakeLists.txt  README.md
src/nautonomous_webserver_logging/launch/: logger_server.launch
src/nautonomous_webserver_logging/scripts/: ConnectionHandler.py
src/nautonomous_webserver_logging/src/: logger_server.cpp
(+233 files in other folders)
